* Ticket #4428, Improve the clarity of the error message when opening a subtitle file fails
! "Load subtitle" dialog: Fix the file filters on Windows Vista+
! Ticket #3930, Fix a possible crash with embedded subtitles when the subtitle queue is disabled
! Ticket #4505, Embedded text subtitles: Fix a possible crash related to the Subresync bar
! Ticket #4536, ASS/SSA subtitles: Fix the parsing of \fs tags when the value was negative


1.7.6 - 05 July 2014
====================
+ ISR: Add an option to control subtitle renderer behavior regarding anamorphic video
+ ISR: Add an option to render subtitles at the source video resolution like VSFilter.
+ VSFilter: Display more informative names for external subtitles (similar to what is done with the internal subtitle renderer)
+ Add a "Copy to clipboard" feature to the "Play > Filters" menu so that the list of currently loaded filters can be copied easily
+ Add an option in the "Save Subtitle" dialog to control the export of the default style as an external ".style" file
+ Ticket #1411, Internal Subtitle Renderer/VSFilter: Support loading external PGS subtitles
* Text subtitles: When rendering to the video frame, clip subtitles that go out of the frame
* Text subtitles: Faster subtitle parsing (around 20%)
* Ticket #4144, Move the user interface language selection to the Options dialog and remove the "Language" menu.
  The increasing number of translations had reduced the usability of the menu
* Ticket #3739, Make error reporting less verbose when some non-critical DVD hooks fail
* Don't use auto-zoom feature when the window was positioned using the Aero Snap
* Don't exit fullscreen when loosing focus to a window on the same monitor
* Updated Little CMS to v2.6 (git 4da8703)
* Updated Unrar to v5.1.6
* Updated MediaInfoLib to v0.7.69
* Updated ZenLib to v0.4.29 r458
* Updated LAV Filters to stable version 0.62.0:
    - LAV Video: Support VP7 video